# cc-switch-tool

./: .gitignore  README.md  README.zh-CN.md  pyproject.toml
scripts/: bootstrap_install.py
src/cc_switch_tool/: __init__.py  cli.py  i18n.py  store.py  tool_installer.py  tui.py  upgrade.py
src/cc_switch_tool/sync/: __init__.py  config.py  crypto.py  manager.py  pull.py  webdav.py
src/cc_switch_tool/writers/: claude.py  codex.py  common.py  gemini.py
tests/: test_gemini_writer.py
