[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cc-switch-tool"
version = "0.1.2"
description = "Switch Claude Code, Codex CLI, and Gemini CLI relay endpoint profiles"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "tomlkit>=0.12.0",
    "questionary>=2.0.0",
]

[project.optional-dependencies]
sync = [
    "cryptography>=42.0.0",
]

[project.scripts]
cc-switch = "cc_switch_tool.cli:main"
ccs = "cc_switch_tool.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/cc_switch_tool"]
